Optimización de imágenes

--- a/base.html
+++ b/base.html
@@ -58,5 +58,6 @@
             </div>
             <p class="copyright">Todos los derechos reservados <span> &copy; La Cafetería</span></p>
         </footer>
+        <script src="./src/js/imagenes.js"></script>
     </body>
 </html>
