--- a/index.html
+++ b/index.html
@@ -66,43 +66,83 @@
                 <div class="galeria">
                     <!-- Imagen 1 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_01.jpg" alt="imagen 1">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_01.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_01.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_01.jpg" width="500" height="300" alt="imagen 1">
+                        </picture>
                     </div>
                     <!-- Imagen 2 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_02.jpg" alt="imagen 2">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_02.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_02.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_02.jpg" width="500" height="300" alt="imagen 2">
+                        </picture>
                     </div>
                     <!-- Imagen 3 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_03.jpg" alt="imagen 3">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_03.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_03.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_03.jpg" width="500" height="300" alt="imagen 3">
+                        </picture>
                     </div>
                     <!-- Imagen 4 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_04.jpg" alt="imagen 4">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_04.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_04.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_04.jpg" width="500" height="300" alt="imagen 4">
+                        </picture>
                     </div>
                     <!-- Imagen 5 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_05.jpg" alt="imagen 5">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_05.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_05.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_05.jpg" width="500" height="300" alt="imagen 5">
+                        </picture>
                     </div>
                     <!-- Imagen 6 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_06.jpg" alt="imagen 6">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_06.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_06.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_06.jpg" width="500" height="300" alt="imagen 6">
+                        </picture>
                     </div>
                     <!-- Imagen 7 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_07.jpg" alt="imagen 7">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_07.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_07.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_07.jpg" width="500" height="300" alt="imagen 7">
+                        </picture>
                     </div>
                     <!-- Imagen 8 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_08.jpg" alt="imagen 8">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_08.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_08.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_08.jpg" width="500" height="300" alt="imagen 8">
+                        </picture>
                     </div>
                     <!-- Imagen 9 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_09.jpg" alt="imagen 9">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_09.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_09.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_09.jpg" width="500" height="300" alt="imagen 9">
+                        </picture>
                     </div>
                     <!-- Imagen 10 -->
                     <div class="imagen">
-                        <img src="build/assets/img/galeria/galeria_10.jpg" alt="imagen 10">
+                        <picture>
+                            <source srcset="build/assets/img/galeria/galeria_10.avif" type="image/avif">
+                            <source srcset="build/assets/img/galeria/galeria_10.webp" type="image/webp">
+                            <img loading="lazy" src="build/assets/img/galeria/galeria_10.jpg" width="500" height="300" alt="imagen 10">
+                        </picture>
                     </div>
                 </div>
             </section>
@@ -217,5 +257,6 @@
             </div>
             <p class="copyright">Todos los derechos reservados <span> &copy; La Cafetería</span></p>
         </footer>
+        <script src="./src/js/imagenes.js"></script>
     </body>
 </html>
